# lab4-mineria

./: .gitignore  README.md  lab4.ipynb  pyproject.toml
