[project]
name = "lab4"
version = "0.1.0"
description = "Laboratorio 4 – Árboles de Decisión | CC3074 Minería de Datos UVG"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyreadr>=0.5.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.4.1",
]
